# MayaShaderLibrary

./: .gitignore  Pipfile  README.md  mayaShaderLibrary.sublime-workspace  pyproject.toml  ruff.toml
docs/: conf.py  guide.rst  guides.rst  index.rst  install.rst  misc.rst  requirements.txt  ui.rst
docs/_build/doctrees/: MayaShaderLibrary.doctree  MayaShaderLibrary.plugin.doctree  MayaShaderLibrary.plugin.ui.doctree  MayaShaderLibrary.scripts.doctree  (+14 more)
maya/scene/: thumbnailScene.ma
maya_plugin/: MayaShaderLibrary.mod
maya_plugin/plug-ins/: MayaShaderLibrary.py
msl/: __init__.py  config.py  main.py  readme.md  shaderLibrary.py  shader_library.py  version.py
msl/libs/: add_category.py  categories.py  category.py  categoryController.py  category_controller.py  category_model.py  category_view.py  logger.py  observer.py  qt_dialogs.py  shader.py  shaderController.py  shaderGenerator.py  shader_controller.py  shader_generator.py  shader_icon_widget.py  shader_list_widget.py  shader_widget.py  shader_widget_base.py  signals.py
msl/resources/: icons.py
msl/ui/: icons.py
plugin/maya/: Arcane_ShaderLibrary.py
plugin/ui/: menu.py  menuConfig.ini
scripts/: __init__.py  shaderLibrary.py
scripts/libs/: category.py  categoryController.py  observer.py  shader.py  shaderGenerator.py
scripts/ui/: icons.py  jsonHelp.py  main_ui.ui  uiStatus.py
shaderLibrary/: __init__.py  shaderLibrary.py
shaderLibrary/libs/: category.py  categoryController.py  observer.py  shader.py  shaderController.py  shaderGenerator.py
shaderLibrary/ui/: arcane.qss  shaderButton.qss
(+127 files in other folders)
