[tool.poetry]
name = "MayaShaderLibrary"
version = "2.2.0"
description = "A shading library tool to store and organize shaders in Autodesk Maya."
authors = ["Maximiliano Rocamora"]
readme = "README.md"
license = "GNU General Public License v3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
sphinx = "7.4.7"
sphinx-rtd-theme = "3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
